internal/generate/testdata/errors/InvalidSchemaSyntax.go
package errors

const _ = `# @octoqlgen
	query InvalidSchema { f }
`
